primer commit - nueva rama

--- a/practica.html
+++ b/practica.html
@@ -4,6 +4,7 @@
 <head>
     <meta charset="utf">
     <title>Curse of git</title>
+    <link href="styles/style.css" rel="stylesheet" type="text/css">
 </head>
 
 <body>
