--- a/practica.html
+++ b/practica.html
@@ -8,7 +8,7 @@
 <body>
     <h1>"Here! I will make some tests"</h1>
     <p>Hi, I am learning Git and Git Hub, for me it's my first time.</p>
-    <p>It's a little difficult.</p>
+    <p>It's a little difficultingg.</p>
 </body>
 
 </html>
